Smoke simulations with Adaptive Domain broken for 'Final' bakes with OpenVDB in 2.83 #75883

Closed
opened 2020-04-19 00:04:18 +02:00 by David Jordan · 8 comments

System Information
Operating system: Linux/Ubuntu
Graphics card: Intel

Blender Version
Broken: 2.83, blender-2.83-76b3aac802f9-linux64, master, 2020-04-17
Worked: 2.82a

Short description of error
In Blender 2.82 smoke/fire simulations with Adaptive Domain worked with 'OpenVDB' baked caches.
In the current nightly builds of 2.83, smoke/fire sims only work when baked with the 'Uni Cache' format. This is with cache type set to 'Final'.

Exact steps for others to reproduce the error
Open a new blend file.
Create "Quick Smoke".
Select the Smoke Domain object.
Go to the physics tab.
Turn on Fluid->Settings->Adaptive Domain
Set Fluid->Cache->Type to 'Final'
Set Fluid->Cache->Data File Format to 'OpenVDB'
Run Fluid->Cache->Bake All

The simulation will appear empty for all frames of the simulation.

Open file, bake all, play.
#75883.blend

**System Information** Operating system: Linux/Ubuntu Graphics card: Intel **Blender Version** Broken: 2.83, blender-2.83-76b3aac802f9-linux64, master, 2020-04-17 Worked: 2.82a **Short description of error** In Blender 2.82 smoke/fire simulations with Adaptive Domain worked with 'OpenVDB' baked caches. In the current nightly builds of 2.83, smoke/fire sims only work when baked with the 'Uni Cache' format. This is with cache type set to 'Final'. **Exact steps for others to reproduce the error** Open a new blend file. Create "Quick Smoke". Select the Smoke Domain object. Go to the physics tab. Turn on Fluid->Settings->Adaptive Domain Set Fluid->Cache->Type to 'Final' Set Fluid->Cache->Data File Format to 'OpenVDB' Run Fluid->Cache->Bake All The simulation will appear empty for all frames of the simulation. Open file, bake all, play. [#75883.blend](https://archive.blender.org/developer/F8482941/T75883.blend)
Author

Added subscriber: @dmj

Added subscriber: @dmj
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @L0Lock

Added subscriber: @L0Lock

Noticed the same issue using modular cache. Simulations don't show up with openVDB format and adaptive domain ON at the same time, but it works without adaptive domain, or by switching to Uni cache (and then we can use adaptive domain) again.

Worth to mention that, Although the result is empty, the baking takes as much time as a functional baking.

Noticed the same issue using modular cache. Simulations don't show up with openVDB format and adaptive domain ON at the same time, but it works without adaptive domain, or by switching to Uni cache (and then we can use adaptive domain) again. Worth to mention that, Although the result is empty, the baking takes as much time as a functional baking.

Added subscriber: @Adam-Burke

Added subscriber: @Adam-Burke
Member

Added subscriber: @ankitm

Added subscriber: @ankitm

This issue was referenced by 8b5868cc15

This issue was referenced by 8b5868cc15dac0a967bb7cd03e0ed2a15026fb35

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-05-04 18:17:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75883
No description provided.